--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "vue": "^3.0.0",
     "vue-axios": "^3.2.2",
     "vue-router": "^4.0.0-0",
+    "vuejs-datepicker": "^1.6.2",
     "vuex": "^4.0.0-rc.2"
   },
   "devDependencies": {
