--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "dependencies": {
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "particles.js": "^2.0.0",
     "vee-validate": "^2.2.15",
     "vue": "^3.0.0",
     "vue-axios": "^3.2.2",
+    "vue-particlejs": "^1.1.0",
     "vue-router": "^4.0.0-0",
     "vuejs-datepicker": "^1.6.2",
     "vuex": "^4.0.0-rc.2"
@@ -25,6 +27,7 @@
     "@vue/compiler-sfc": "^3.0.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^7.0.0-0"
+    "eslint-plugin-vue": "^7.0.0-0",
+    "vue-particles": "^1.0.9"
   }
 }
